[project]
name = "rxv"
version = "0.0.0"
authors = [{ name = "Michael I Chen", email = "michael.chen.0@gmail.com" }]
description = "A utility to archive URLs."
dependencies = ["structlog", "typer"]

[project.optional-dependencies]
dev = [
    "coverage",
    "coverage-badge",
    "ipython",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
    "twine",
]

[project.scripts]
rxv = "rxv.bin.archive_urls:main"

[tool.mypy]
exclude = "notebook/ | *.ipynb"
packages = ["rxv"]
