[project]
name = "rxv"
version = "0.0.3"
authors = [{ name = "Michael I Chen", email = "michael.chen.0@gmail.com" }]
description = "A utility to archive URLs."
readme = "README.md"
dependencies = [
    "eprints2archives",
    "pydantic",
    "requests",
    "structlog",
    "tqdm",
    "typer",
    "waybackpy",
]
requires-python = ">=3.11,<3.14"

[project.optional-dependencies]
dev = [
    "coverage",
    "coverage-badge",
    "ipython",
    "mypy",
    "pylint",
    "pytest",
    "ruff",
    "twine",
]

[project.scripts]
rxv = "rxv.bin.rxv:rxv"

[project.urls]
Homepage = "https://github.com/michen00/rxv"

[tool.mypy]
exclude = "notebook/ | *.ipynb"
packages = ["rxv"]
